<resources>
    <string name="app_name">InventoryApp</string>
    <string name="rupeeSymbol">\u20B9</string>
    <string name="settingsActivity">Settings</string>
    <string name="detailActivity">Details</string>

    <string name="dummy_productName">Dummy Product</string>
    <string name="dummy_productPrice">200</string>
    <string name="dummy_productQuantity">15</string>
    <string name="dummy_supName">Dummy Supplier</string>
    <string name="dummy_supContact">9874561230</string>

    <string name="menu_main_insert_dummy_data">Insert Dummy Product</string>
    <string name="menu_main_delete_data">Delete all Data.</string>
    <string name="menu_main_settings">Settings</string>

    <string name="menu_detail_edit">edit</string>
    <string name="menu_detail_delete">Delete</string>

    <string name="main_negative_quantity">Not enough quantity.</string>
    <string name="main_delete_all">Products Deleted.</string>

    <string name="delete_confirm_text">Are you sure want to delete?</string>
    <string name="delete_confirm_positive">Yes</string>
    <string name="delete_confirm_negative">No</string>

    <string name="quantityAvailableText">Quantity : </string>
    <string name="noProductsMessage">No products in inventory !!.</string>
    <string name="noProductMessageDesc">Get started by adding a product.</string>
    <string name="list_button">Sale</string>

    <string name="settings_default_quantityIncrement_value">1</string><!-- default Value -->
    <string name="settings_default_quantityIncrement_key">quantity_increment</string>
    <string name="settings_default_quantityIncrement_lable">Quantity Increment or decrement.</string>

    <string name="settings_minimum_safe_quantity_value">5</string>
    <string name="settings_minimum_safe_quantity_key">minimum_safe_quantity</string>
    <string name="settings_minimum_safe_quantity_lable">Warn when quantity is less then</string>

    <string name="detail_negative_quantity">Quantity Cannot negative.</string>
    <string name="detail_orderNow">Order Now</string>
    <string name="detail_quantityLabel">Quantity : </string>
    <string name="detail_supplierLabel">Supplier Information : </string>

    <string name="edit_edit_title">Edit Product</string>
    <string name="edit_add_title">Add Product</string>
    <string name="edit_product_name_label">Product Name</string>
    <string name="edit_product_price_label">Product Price in \u20B9</string>
    <string name="edit_product_quantity_label">Product Quantity</string>
    <string name="edit_sup_name_label">Supplier Name</string>
    <string name="edit_sup_contact_label">Supplier Contact Number</string>
    <string name="edit_prdName_error">Enter Product Name</string>
    <string name="edit_prdQuantity_error">Enter Product Quantity</string>
    <string name="edit_prdPrice_error">Enter Product Price</string>
    <string name="edit_supName_error">Enter Supplier Name</string>
    <string name="edit_supName_contact">Enter Supplier Contact Number</string>
    <string name="edit_product_insert">Product Inserted.</string>
    <string name="edit_product_updae">Product Updated.</string>
    <string name="edit_product_discardDialog_msg">Discard your changes and quit editing?</string>
    <string name="edit_product_discardDialog_positive">Keep Editing</string>
    <string name="edit_product_discardDialog_negative">Discard</string>
</resources>
