<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_name_label" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/margin_between"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_price_label">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/margin_between"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/productQuantity"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_quantity_label">
        </EditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/margin_between"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/supplierName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_sup_name_label">
        </EditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/margin_between"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/supplierContact"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:digits="0123456789+"
            android:layout_height="wrap_content"
            android:hint="@string/edit_sup_contact_label">
        </EditText>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>